# agentObserve

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  DESIGN.md  LICENSE  Makefile  NOTICE  PRODUCT.md  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  otel_receiver.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.impeccable/: design.json
cli/: pyproject.toml
cli/src/agentobserve/: __init__.py  _auto.py  _bootstrap.py  _langchain_handler.py
docker/: api.Dockerfile  receiver.Dockerfile  ui.Dockerfile
docker/ui/: nginx.conf
futureAddition/: per-span-extractor-dispatch.md
handoff/: svc-ai-client-integration.md
scripts/: add-license-headers.sh  release.sh
server/: index.js  loader.js  parser.js  routes.js  toolTokens.js
server/adapters/: anthropic.js  claude_code_cli.js  index.js  langchain.js  shared.js
server/updates/: checker.js  github.js
src/: App.jsx  main.jsx
src/components/: AgentSlab.jsx  AsciiBox.jsx  DungeonView.jsx  HUD.jsx  MinimapCell.jsx  NodeDetailView.jsx  SessionList.jsx  SessionTabs.jsx  StackedDetail.jsx  StepPanel.jsx  SvgConnections.jsx  TimelineBar.jsx  UpdateBanner.jsx  WorkflowFrame.jsx  WorkflowGraph.jsx  WorkflowMinimap.jsx
src/components/agentStep/: CollapsibleText.jsx  ExpansionContext.jsx  MessageCall.jsx  ParallelCarousel.jsx  StatusChip.jsx  (+5 more)
src/hooks/: useKeyNav.js  useNodePositions.js  useSessions.js
src/styles/: dungeon.css
src/utils/: agentHierarchy.js  format.js  framework.js  prettyJson.js
