# Copyright (c) 2026 Rishu Goyal. All rights reserved.
# Licensed under the Business Source License 1.1.
# See LICENSE in the project root for license terms.
[project]
name = "agent-observe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.100.0",
    "opentelemetry-proto>=1.21.0",
    "protobuf>=4.25.0",
]

[tool.uv]
package = false
